<resources>
    <string name="app_name">Profitness</string>
    <string name="profitness">ProFitness</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="new_here_create_account">new here?  CREATE ACCOUNT</string>
    <string name="create_new_account">create new account</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered Login Here</string>
    <string name="birth_day">Birth Fay</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="trainer">trainer</string>
    <string name="coach">coach</string>
    <string name="schedule_a_new_workout">Schedule a new workout</string>
    <string name="performance">Performance</string>
    <string name="menu">Menu</string>
    <string name="hello">Hello</string>
    <string name="pick_date_time"><![CDATA[pick date & time]]></string>
    <string name="schedule_training">Schedule training</string>
    <string name="done">Done</string>

    <string name="choose_date">choose date</string>
    <string name="choose_coach">choose coach</string>
    <string name="practice_time">Practice Time</string>
    <string name="edit_performance">Edit Performance</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="day_of_birth">Day Of Birth</string>
    <string name="coose_start_hour">coose start hour</string>
    <string name="choose_end_hour">choose end hour</string>
    <string name="time_for_training">Time for training</string>
    <string name="list_of_trainees">List of trainees</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="lunch_menu">Lunch Menu</string>
    <string name="breakfast_menu">BreakFast Menu</string>
    <string name="dinner">Dinner</string>
    <string name="dinner_menu">Dinner Menu</string>
    <string name="save">Save</string>
    <string name="show_list">Show List</string>
    <string name="option">Option</string>
    <string name="menu_breakfast">Menu BreakFast</string>
    <string name="lunch_recommendation">Lunch Recommendation</string>
    <string name="breakfast_recommendation">BreakFast Recommendation</string>
    <string name="menu_lunch">Menu Lunch</string>
    <string name="dinner_recommendation">Dinner Recommendation</string>
    <string name="menu_dinner">Menu Dinner</string>
    <string name="personal_information">Personal Information</string>
    <string name="empty">empty</string>
    <string name="choos_date">Choos Date</string>
    <string name="scheduled_training">Scheduled training</string>
    <string name="trainee_name">trainee name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="coachText">Coach</string>
    <string name="trainee">Trainee</string>
    <string name="if_trainee_select_coach">If Trainee, Select Coach:</string>
    <string name="performances">Performances</string>
    <string name="show_performance">Show Performance</string>
    <string name="save_performance">Save Performance</string>
    <string name="weight">Weight:</string>
    <string name="bmi">BMI:</string>
    <string name="fat_percentage">Fat Percentage:</string>
    <string name="muscle_mass">Muscle mass:</string>
    <string name="the_performance">The Performance</string>
    <string name="weight_trainee">Weight Trainee:</string>
    <string name="bmi_trainee">BMI Trainee:</string>
    <string name="fat_percentage_trainee">Fat Percentage Trainee:</string>
    <string name="muscle_mass_trainne">Muscle Mass Trainne:</string>
    <string name="upcoming_training">Upcoming training</string>
    <string name="your_training">Your Training</string>


</resources>