<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/optionId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/option"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/breakFastId2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breakfast_recommendation"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/editTextBreakFast"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/menu_breakfast"
                android:maxLines="5"
                android:textColor="#221E1E" />

            <TextView
                android:id="@+id/lunchId2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lunch_recommendation"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/editTextLunch"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/menu_lunch"
                android:maxLines="5"
                android:textColor="#221E1E" />

            <TextView
                android:id="@+id/dinnerId2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dinner_recommendation"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/editTextDinnerId"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/menu_dinner"
                android:maxLines="5"
                android:textColor="#221E1E" />

        </LinearLayout>

    </ScrollView>


</androidx.cardview.widget.CardView>