<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Menu">


    <Spinner
        android:id="@+id/spinnerId"
        android:layout_width="403dp"
        android:layout_height="62dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/breakfastId"
        android:layout_width="120dp"
        android:layout_height="41dp"
        android:layout_marginTop="1dp"
        android:text="@string/breakfast"
        android:textColor="#0B0A0A"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerId"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/breakfastEditText"
        android:layout_width="405dp"
        android:layout_height="80dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/breakfast_menu"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakfastId"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/LuchId"
        android:layout_width="120dp"
        android:layout_height="41dp"
        android:text="@string/lunch"
        android:textColor="#0B0A0A"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakfastEditText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/LunchEditText"
        android:layout_width="405dp"
        android:layout_height="80dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/lunch_menu"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LuchId"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/DinnerId"
        android:layout_width="120dp"
        android:layout_height="41dp"
        android:text="@string/dinner"
        android:textColor="#0B0A0A"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LunchEditText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/DinnerEditText"
        android:layout_width="405dp"
        android:layout_height="80dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/dinner_menu"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DinnerId"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/saveId"
        android:layout_width="149dp"
        android:layout_height="61dp"
        android:backgroundTint="#8E8B8B"
        android:text="@string/save"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DinnerEditText"
        app:layout_constraintVertical_bias="0.366" />

    <Button
        android:id="@+id/showListBtn"
        android:layout_width="149dp"
        android:layout_height="61dp"
        android:backgroundTint="#8E8B8B"
        android:text="@string/show_list"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveId"
        app:layout_constraintVertical_bias="0.129" />
</androidx.constraintlayout.widget.ConstraintLayout>