<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DetailsTraining">


    <Button
        android:id="@+id/practiceTimeBtn"
        android:layout_width="202dp"
        android:layout_height="49dp"
        android:backgroundTint="#B3777575"
        android:text="@string/practice_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <Button
        android:id="@+id/performanceTraineeBtn"
        android:layout_width="202dp"
        android:layout_height="49dp"
        android:backgroundTint="#B3777575"
        android:text="@string/edit_performance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/practiceTimeBtn"
        app:layout_constraintVertical_bias="0.175" />

    <Button
        android:id="@+id/menuBtn"
        android:layout_width="202dp"
        android:layout_height="49dp"
        android:backgroundTint="#B3777575"
        android:text="@string/edit_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/performanceTraineeBtn"
        app:layout_constraintVertical_bias="0.244" />
</androidx.constraintlayout.widget.ConstraintLayout>